@@ -1,3 +1,12 @@
+2010-01-08 14:31  rsbivand
+
+	* R/SpatialGrid-methods.R, R/SpatialPoints-methods.R, src/gcdist.c:
+	  identical points fix for sp_lengths
+
+2010-01-07 19:08  rsbivand
+
+	* ChangeLog, inst/ChangeLog: added centroid protection
+
 2010-01-07 13:07  rsbivand
 
 	* DESCRIPTION, inst/include/sp_xports.c, src/sp_xports.c: added
